tests/errors/missing_pins.nm
component Foo {
    prefix = "U";
    footprint = "foo";

    pin A: input = 1;
    pin B: input = 2;
    pin C: input = 4;
}